MB-32946 - Display issues in QWB schema panel
With the default behavior, a slice of text in the panel was being
shown to the right of the scrollbar. This could be fixed for Sarafi
and Chrome, but Firefox insists on drawing the scrollbar that way, and
doesn't offer any way to change it. I tried adjusting spacing many
different ways, but Firefox wouldn't budge.

Reviewed-on: http://review.couchbase.org/111943
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/ui-current/query.css
+++ b/query-ui/ui-current/query.css
@@ -111,6 +111,28 @@ input.ng-invalid-number {
   -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.15);
 }
 
+/* the scrollbar in the schema display needs to be nudged over a bit */
+.narrow-scrollbar::-webkit-scrollbar {
+  width: 7px; /* force scrollbars to appear with this size */
+  height: 7px;
+
+}
+.narrow-scrollbar::-webkit-scrollbar-track { /* force track to appear*/
+  background-color: #f5f5f5;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+}
+.narrow-scrollbar::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  background-color: #ececec;
+  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.15);
+}
+
+.small-button {
+  min-width: 1rem;
+  padding: 0 0.5rem;
+}
 
 /* query monitoring tables ------------------------------------------------- */
 .qm-table-active .cbui-table-header,
